
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package MCD_PSM_USDC_A;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/MCD_PSM_USDC_A";

message Deny {
	google.protobuf.Timestamp ts = 1;
	bytes User = 2;		//	address
}

message File {
	google.protobuf.Timestamp ts = 1;
	bytes What = 2;		//	bytes32
	bytes Data = 3;		//	uint256
}

message Rely {
	google.protobuf.Timestamp ts = 1;
	bytes User = 2;		//	address
}

message SellGem {
	google.protobuf.Timestamp ts = 1;
	bytes Owner = 2;		//	address
	bytes Value = 3;		//	uint256
	bytes Fee = 4;		//	uint256
}

message BuyGem {
	google.protobuf.Timestamp ts = 1;
	bytes Owner = 2;		//	address
	bytes Value = 3;		//	uint256
	bytes Fee = 4;		//	uint256
}
