
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package RWA_URN;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/RWA_URN";

message Draw {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
	bytes Wad = 3;		//	uint256
}

message Free {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
	bytes Wad = 3;		//	uint256
}

message Lock {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
	bytes Wad = 3;		//	uint256
}

message Rely {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}

message Deny {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}

message File {
	google.protobuf.Timestamp ts = 1;
	bytes What = 2;		//	bytes32
	bytes Data = 3;		//	address
}

message Hope {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}

message Nope {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}

message Quit {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
	bytes Wad = 3;		//	uint256
}

message Wipe {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
	bytes Wad = 3;		//	uint256
}
