
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package MCD_ESM;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/MCD_ESM";

message Deny {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}

message DenyProxy {
	google.protobuf.Timestamp ts = 1;
	bytes Base = 2;		//	address
	bytes Pause = 3;		//	address
}

message File {
	google.protobuf.Timestamp ts = 1;
	bytes What = 2;		//	bytes32
	bytes Data = 3;		//	uint256
}

message File0 {
	google.protobuf.Timestamp ts = 1;
	bytes What = 2;		//	bytes32
	bytes Data = 3;		//	address
}

message Fire {
	google.protobuf.Timestamp ts = 1;
}

message Join {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
	bytes Wad = 3;		//	uint256
}

message Rely {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}
