
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package OptimismL2DaiTokenBridge;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/OptimismL2DaiTokenBridge";

message Approve {
	google.protobuf.Timestamp ts = 1;
	bytes Token = 2;		//	address
	bytes Spender = 3;		//	address
	bytes Value = 4;		//	uint256
}

message Deny {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}

message Rely {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}
