
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package UniV2;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/UniV2";

message Swap {
	google.protobuf.Timestamp ts = 1;
	bytes Sender = 2;		//	address
	bytes Amount0In = 3;		//	uint256
	bytes Amount1In = 4;		//	uint256
	bytes Amount0Out = 5;		//	uint256
	bytes Amount1Out = 6;		//	uint256
	bytes To = 7;		//	address
}

message Sync {
	google.protobuf.Timestamp ts = 1;
	bytes Reserve0 = 2;		//	uint112
	bytes Reserve1 = 3;		//	uint112
}

message Transfer {
	google.protobuf.Timestamp ts = 1;
	bytes From = 2;		//	address
	bytes To = 3;		//	address
	bytes Value = 4;		//	uint256
}

message Approval {
	google.protobuf.Timestamp ts = 1;
	bytes Owner = 2;		//	address
	bytes Spender = 3;		//	address
	bytes Value = 4;		//	uint256
}

message Burn {
	google.protobuf.Timestamp ts = 1;
	bytes Sender = 2;		//	address
	bytes Amount0 = 3;		//	uint256
	bytes Amount1 = 4;		//	uint256
	bytes To = 5;		//	address
}

message Mint {
	google.protobuf.Timestamp ts = 1;
	bytes Sender = 2;		//	address
	bytes Amount0 = 3;		//	uint256
	bytes Amount1 = 4;		//	uint256
}
